# OpenGL_Practice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
1.window/: CMakeLists.txt  Readme.md
1.window/inc/: Shader.hpp
1.window/src/: main.cpp
2.square/: Readme.md
2.square/inc/: Shader.hpp  Window.hpp
2.square/src/: main.cpp
3.camera/: CMakeLists.txt  Readme.md
3.camera/inc/: Event.hpp  OpenGL.hpp
4.model_load/: CMakeLists.txt  Readme.md  clipboard  cursor  events  glfwinfo  iconify  monitors  msaa  offscreen  reopen  triangle-vulkan
4.model_load/boing.app/Contents/MacOS/: boing
4.model_load/empty.app/Contents/MacOS/: empty
4.model_load/gamma.app/Contents/MacOS/: gamma
4.model_load/gears.app/Contents/MacOS/: gears
4.model_load/heightmap.app/Contents/MacOS/: heightmap
4.model_load/icon.app/Contents/MacOS/: icon
4.model_load/inc/: CharColor.hpp  Mesh.hpp  Shader.hpp  Window.hpp
4.model_load/inputlag.app/Contents/MacOS/: inputlag
4.model_load/joysticks.app/Contents/MacOS/: joysticks
4.model_load/opacity.app/Contents/MacOS/: opacity
4.model_load/particles.app/Contents/MacOS/: particles
4.model_load/shaders/: vert.vs
4.model_load/sharing.app/Contents/MacOS/: sharing
4.model_load/simple.app/Contents/MacOS/: simple
4.model_load/splitview.app/Contents/MacOS/: splitview
4.model_load/tearing.app/Contents/MacOS/: tearing
4.model_load/threads.app/Contents/MacOS/: threads
4.model_load/timeout.app/Contents/MacOS/: timeout
4.model_load/title.app/Contents/MacOS/: title
4.model_load/wave.app/Contents/MacOS/: wave
4.model_load/windows.app/Contents/MacOS/: windows
5.more_cubes/: CMakeLists.txt  Readme.md
5.more_cubes/inc/: Cube.hpp  Model.hpp  OpenGL.hpp
5.more_cubes/src/: main.cpp
6.lighting/: CMakeLists.txt  Readme.md
6.lighting/glfw_temp/: clipboard  cursor  events  glfwinfo  iconify  monitors  msaa  offscreen  reopen  triangle-vulkan
6.lighting/glfw_temp/boing.app/Contents/MacOS/: boing
6.lighting/glfw_temp/empty.app/Contents/MacOS/: empty
6.lighting/glfw_temp/gamma.app/Contents/MacOS/: gamma
6.lighting/glfw_temp/gears.app/Contents/MacOS/: gears
6.lighting/glfw_temp/heightmap.app/Contents/MacOS/: heightmap
6.lighting/glfw_temp/icon.app/Contents/MacOS/: icon
6.lighting/glfw_temp/inputlag.app/Contents/MacOS/: inputlag
6.lighting/glfw_temp/joysticks.app/Contents/MacOS/: joysticks
6.lighting/glfw_temp/opacity.app/Contents/MacOS/: opacity
6.lighting/glfw_temp/particles.app/Contents/MacOS/: particles
6.lighting/glfw_temp/sharing.app/Contents/MacOS/: sharing
6.lighting/glfw_temp/simple.app/Contents/MacOS/: simple
6.lighting/glfw_temp/splitview.app/Contents/MacOS/: splitview
6.lighting/glfw_temp/tearing.app/Contents/MacOS/: tearing
6.lighting/glfw_temp/threads.app/Contents/MacOS/: threads
6.lighting/glfw_temp/timeout.app/Contents/MacOS/: timeout
6.lighting/glfw_temp/title.app/Contents/MacOS/: title
6.lighting/glfw_temp/wave.app/Contents/MacOS/: wave
6.lighting/glfw_temp/windows.app/Contents/MacOS/: windows
6.lighting/inc/: Camera.hpp  Cube.hpp  Model.hpp  OpenGL.hpp  Shader.hpp  Window.hpp
6.lighting/shaders/: cube_frag.fs  cube_vert.vs  model_frag.fs  model_vert.vs
6.lighting/src/: main.cpp
7.OBB/: CMakeLists.txt
inc/: Camera.hpp  Mesh.hpp  Model.hpp  OpenGL.hpp  Shader.hpp  Window.hpp
libraries/assimpp/: CMakeLists.txt
libraries/glfw-3.3.8/: CMakeLists.txt
src/: main.cpp
